# VoiceFrame

./: .gitignore  =2.0.0  README.md  app.py  dialogues.json  download_model.py  main.py  package-lock.json  package.json  requirements.txt  voice_generation.py
Video framing/: framing.py  framing_dynamic.py  framing_fixed.py  scene_data.json  test.py  test2.py
animeinsseg/: __init__.py
app/: _layout.tsx  welcome.tsx
app/(tabs)/: index.tsx  profile.tsx  stories.tsx
backend/: gemini_client.py  invoke.py  main.py  pyproject.toml  requirements.txt  test.py  testing_speech_bubble.py  video_gen.py  voice_generation.py
contexts/: ThemeContext.tsx
frontend-app/: app.json  package-lock.json  package.json
frontend-app/app/: video.tsx  welcome.tsx
frontend-app/app/(tabs)/: _layout.tsx  downloads.tsx  index.tsx
frontend-app/components/: FadingBorderButton.tsx  LoadingIndicator.tsx  Toast.tsx
frontend-app/hooks/: useCustomFonts.ts
utils/: constants.py
