[project]
name = "backend"
version = "0.1.0"
description = "Backend for project: VoiceFrame"
requires-python = ">=3.13.2"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "beautifulsoup4==4.13.5",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "coloredlogs==15.0.1",
    "decorator==5.2.1",
    "fastapi==0.117.1",
    "ffmpeg-python==0.2.0",
    "flatbuffers==25.9.23",
    "future==1.0.0",
    "google==3.0.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.1",
    "google-api-python-client==2.183.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.38.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.75.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "numpy==2.3.3",
    "onnxruntime==1.23.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "piper-tts==1.3.0",
    "proglog==0.1.12",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.5",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "starlette==0.48.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]

